begin 3.1.0-SNAPSHOT, based on java 9 adapting