@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>net.butfly.albacore</groupId>
 		<artifactId>albacore</artifactId>
-		<version>3.0.3</version>
+		<version>3.1.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>albacore-nodep</artifactId>
 	<dependencies>
@@ -13,4 +13,16 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 	</dependencies>
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+						<arg>--add-exports</arg><arg>jdk.scripting.nashorn/jdk.nashorn.internal.ir.debug=ALL-UNNAMED</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
